app/assets/stylesheets/pages/_index.scss
// Import page-specific CSS files here.
@import "home";
@import "profile";
@import "show";

.browse-chefs {
  font-family: 'pacifico', cursive;
  font-size: 56px;
}

.chef-profile {
  font-family: 'arvo', serif;
  box-shadow: 0 0 8px;
  padding: 16px;
  text-align: center;
  transition: 0.3s;
  width: 28%;
  margin: 0px 24px 24px 24px;

    .chef-name {
    font-size: 32px;
    color: #051a23;
    font-family: 'pacifico', cursive;

    &:hover {
      text-decoration: none;
    }
  }

  .chef-details {
    font-size: 14px;

    p {
      margin-bottom: 0px;
    }
  }
}

.chef-container {
  margin-top: 50px;
  margin-bottom: 50px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.chef-profile:hover {
  transform: scale(1.1);
  transition: 0.3s;
}

.private {
  font-size: 16px;
  margin-right: 10px;
}

.login {
  color: red!important;
}

.main-container {
  display: flex;
}

#map {
  min-height: 100vh !important;
  min-width: 35vw;
  max-width: 35vw;
  position: sticky;
  top: 0;
  margin-top: 16px;
  margin-right: 16px;
}

.cards-container {
  flex-grow: 1;
}

#no-reviews {
  font-size: 12px;
}

.avail-chefs {
  font-size: 12px;
}

